--- a/index.mdx
+++ b/index.mdx
@@ -1,71 +1,78 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: Введение
+description: "Единственный и обязательный к изучению источник информации по вопросам, связанным с Sasha AI"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+## Знакомство с платформой
 
-## Setting up
+Салют! Вы попали в базу знаний Sasha AI — единственный и обязательный к изучению источник информации по вопросам, связанным с Sasha AI.
 
-The first step to world-class documentation is setting up your editing environments.
+Независимо от того, являетесь вы новым пользователем, пытающимся разобраться в функционале платформы или продвинутым, ищущим ответы на специфические вопросы — вы пришли в нужное место.
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+**Официальный сайт:** [https://trysasha.ru/](https://trysasha.ru/)
 
-## Make it yours
+## Что такое Sasha AI?
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Sasha AI — это нейросеть для генерации квалифицированных лидов.
 
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+Мы разрабатываем платформу, на которой вы можете быстро, удобно и дешево запускать операторов для обзвона базы клиентов. Технология прекрасно справляется с телефонными переговорами, квалификацией, пресейлом и назначением следующего шага.
+
+Наш продукт построен на базе искусственного интеллекта. Это значит, что Sasha AI в режиме реального времени транскрибирует речь собеседника, генерирует текстовый ответ и озвучивает его. Все это с задержкой менее 1,5 секунд от речи клиента.
+
+Такой технологический стек в купе с человеческими задержками позволяет не только физически болтать с клиентами, но и вовлекать в диалог, убеждать и менять точку зрения. Все это сулит вам ростом конверсий и максимизацией выручки с базы.
+
+_Старкнет наступил, человеки больше не нужны (шутка)_
+
+## Для кого мы работаем?
+
+Мы уверены, что у вашей компании есть неограниченное количество номеров телефонов потенциальных клиентов.
+
+Карточки клиентов в CRM, база посетителей отраслевого мероприятия, входящие заявки, богом забытая гугл-таблица с регистрациями на вебинар пятилетней давности, лиды со статусом недозвон.
+
+За каждым телефоном стоит живой человек, у которого с какой-то вероятностью есть проблема, которую может решить ваша компания.
+
+**Проблема в том, что на контрасте с безграничными номерами — ресурс отдела продаж сильно ограничен.**
+
+Цель Sasha AI — из всего объема контактов отобрать для вас те, у которых есть проблема, намерение ее решать и интенция связаться с вашим менеджером для детальной консультации.
+
+Вы вольны использовать продукт так, как вам вздумается. Сашу можно настроить как рекрутера, менеджера клиентской поддержки, да хоть психолога.
+
+Но продукт и его компоненты будут развиваться в сторону лидогенерации и продаж.
+
+**Мы являемся Яндекс Директом для работы с клиентами. Коробочкой, в которую вы кладете рубль, а вытаскиваете пять.**
+
+## На чем мы зарабатываем?
+
+Плата за использование платформы происходит в рамках подписной модели. Выбрать и оформить подписку вы можете в разделе «Биллинг» на платформе.
+
+Единицей измерения служит минута разговора Sasha AI с собеседником: она стоит от 14 до 20 рублей. Чем больше звоните — тем дешевле минута. Все просто.
+
+В пересчете на выработку живого оператора нейросеть в среднем по больнице обойдется вам в 3-4 раза дешевле.
+
+При регистрации мы выделяем вам тестовый баланс в размере 1500 р. Его по уши хватит для внутренних тестов и принятия решения об оплате.
+
+## Какая средняя стоимость за месяц?
+
+Стоимость использования зависит от месячного объема минут, которые вы наговариваете с клиентами.
+
+Ориентировочно, оплатив подписку «Другой разговор» ваш нейродиспетчер наговорит с клиентами 5000 минут, вы получите около 3000 дозвонов и 200 квалифицированных лидов по стоимости 400 рублей за штуку.
+
+## Какие LLM мы используем?
+
+К сожалению или счастью, на платформе нет возможности самостоятельно выбирать используемые нейросети.
+
+У нас развернуты свои собственные большие языковые модели, отвечающие за генерацию текстового ответа (text-to-text) и синтез речи (text-to-speech).
+
+Функцию распознавания речи выполняет Yandex SpeechKit.
+
+Мы самостоятельно проводим обновления пайплайна ведения диалога. Занимайтесь обработкой лидов, а не сложными наукоемкими вопросами.
+
+## Стабильность и Uptime
+
+Наша команда ежедневно прикладывает усилия, чтобы обеспечить высокий уровень стабильности для наших клиентов.
+
+Однако, вы должны понимать, что имеете дело со сложным айти продуктом. Напоминаем — нейросети сами по себе являются одной большой вероятностью.
+
+При возникновении намека на перезагрузку серверов, нехватки вычислительных мощностей и сбоев со стороны технологии мы немедленно перестаем звонить, оповещаем вас об этом и начинаем оперативные технические работы.
+
+<Note>За 1,5 года работы наш Uptime составляет 97,8%</Note>
