--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,97 +1,68 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: "Быстрый старт"
+description: "Создайте, протестируйте и запустите своего первого нейродиспетчера за 4 простых шага"
 ---
 
-## Setup your development
+Для того, чтобы создать, протестировать и запустить своего первого нейродиспетчера вам нужно сделать 4 простых шага:
 
-Learn how to update your docs locally and deploy them to the public.
-
-### Edit and preview
+### Шаг 1. Обучение нейросети с помощью функции «Быстрый старт»
 
 <AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
+  <Accordion icon="brain" title="Настройка нейросети">
+    Перейдите в раздел «Скиллбейсы» и нажмите на кнопку «Быстрый старт»
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 
-    1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `docs.json` is): ``` mintlify dev ```
-    <Note>
-      If you’re currently using the legacy ```mint.json``` configuration file, please update the Mintlify CLI:
-
-
-      ```npm i -g mintlify@latest```
-      And run the new upgrade command in your docs repository:
-
-      ```mintlify upgrade```
-      You should now be using the new ```docs.json``` configuration file. Feel free to delete the ```mint.json``` file from your repository.
-    </Note>
+  <Accordion icon="message" title="Описание компании">
+    В всплывающем окне расскажите чем занимается ваша компания, кому и с какой целью вы собираетесь звонить.
+  </Accordion>
+  <Accordion icon="phone" title="Тестирование">
+    Протестируйте минимально-жизнеспособную версию оператора по тестовому номеру телефона.
   </Accordion>
 </AccordionGroup>
 
-### Deploy your changes
+### Шаг 2. Подключите интеграцию с Telegram
 
 <AccordionGroup>
-
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
-
+  <Accordion icon="list" title="Создание колл-листа">
+    Перейдите в раздел «Колл-листы», нажмите на кнопку «Создать новый»
+  </Accordion>
+  <Accordion icon="webhook" title="Настройка вебхука">
+    Перейдите во вкладку «Вебхуки», нажмите на кнопку «Создать новый». В выпадающем списке выберите передачу лидов в
+    телеграмм — «Telegram»
+  </Accordion>
+  <Accordion icon="telegram" title="Настройка Telegram">
+    Проследуйте инструкции, вставьте ID чата в всплывающем окне, выберите событие «Только лиды», проверьте интеграцию и
+    нажмите на кнопку «Создать».
+  </Accordion>
 </AccordionGroup>
 
-## Update your docs
+### Шаг 3. Загрузите базу клиентов
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+<AccordionGroup>
+  <Accordion icon="brain" title="Настройка скиллбейса">
+    В ранее созданном колл-листе перейдите в «Управление», в поле «Скиллбейсы» выберите настроенный с помощью функции
+    «Быстрый старт» скиллбейс и нажмите на кнопку «Загрузить контакты»
+  </Accordion>
+  <Accordion icon="download" title="Скачивание шаблона">
+    Скачайте шаблон базы контактов из всплывающего окна.
+  </Accordion>
+  <Accordion icon="upload" title="Загрузка базы">
+    Сформируйте базу клиентов в формате CSV по шаблону, указанному на скриншоте. Загрузите ее на платформу, проверьте
+    соответствие загрузки с помощью функции «Предварительный просмотр» и нажмите на кнопку «Загрузить».
+  </Accordion>
+  <Accordion icon="check" title="Проверка">
+    Готово! Вы можете проверить загруженные контакты с функцией «Предпросмотр».
+  </Accordion>
+</AccordionGroup>
 
-<CardGroup>
+### Шаг 4. Запустите прозвон
 
-<Card title="Add Content With MDX" icon="file" href="/essentials/markdown">
-  Add content to your docs with MDX syntax.
-</Card>
-
-<Card
-  title="Add Code Blocks"
-  icon="square-code"
-  href="/essentials/code"
->
-  Add code directly to your docs with syntax highlighting.
-</Card>
-
-<Card
-  title="Add Images"
-  icon="image"
-  href="/essentials/images"
->
-  Add images to your docs to make them more engaging.
-</Card>
-
-<Card
-  title="Add Custom Components"
-  icon="puzzle-piece"
-  href="/essentials/reusable-snippets"
->
-  Add templates to your docs to make them more reusable.
-</Card>
-
-</CardGroup>
+<AccordionGroup>
+  <Accordion icon="play" title="Активация прозвона">
+    Не выходя из созданного колл-листа перейдите в раздел «Управление» и активируйте прозвон с помощью ползунка «Статус
+    колл-листа»
+  </Accordion>
+  <Accordion icon="list" title="Просмотр результатов">
+    Готово! Если вы сделали все правильно и сейчас рабочее время — результаты обзвона отобразятся в разделе «История
+    звонков»
+  </Accordion>
+</AccordionGroup>
