--- a/payments-billing/subscriptions.mdx
+++ b/payments-billing/subscriptions.mdx
@@ -12,7 +12,7 @@ description: "Тарификация и модель оплаты сервиса
 1. Перейдите в раздел «Баланс»
 2. Нажмите на кнопку «Пополнить баланс»
 3. Введите необходимую сумму и выставите счет
-4. После оплаты в течение **10-20 минут** деньги поступят на баланс организации
+4. После оплаты в течение **1-20 минут** деньги поступят на баланс организации (если будний день 05:00-23:00)
 
 <Warning>
 Помимо оплаты подписки деньги могут списываться за рассылку фоллоу-апов в SMS. Планируйте расход и пополняйте организацию с учетом будущих трат.
