--- a/lead-generation/converting-leads-to-revenue.mdx
+++ b/lead-generation/converting-leads-to-revenue.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Как превращать лиды в выручку?"
 description: "Практические принципы конвертации лидов в оплаты через построение доверительных отношений"
-icon: "chart-line"
+icon: "tally-3"
 ---
 
 В продолжение предыдущего раздела. Шагом ранее мы разобрали основные принципы, которые позволят вам настраивать конверсионные «Скиллбейсы» (обучать нейросети)
