--- a/lead-generation/outbound-sales-psychology.mdx
+++ b/lead-generation/outbound-sales-psychology.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Психология исходящих продаж"
 description: "Принципы и аксиомы эффективных прямых продаж на основе миллиона исходящих вызовов"
-icon: "brain"
+icon: "tally-2"
 ---
 
 Совершив более миллиона исходящих вызовов мы что-то поняли про прямые продажи. Мы видели кейсы, в которых компания не получала с обзвонов ничего, кроме судебных исков. Видели кейсы, в которых в структуре выручке компании сильно превалировал канал прямых продаж. В этом разделе делимся своими наблюдениями и аксиомами:
