--- a/lead-generation/why-calls-dont-work.mdx
+++ b/lead-generation/why-calls-dont-work.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Почему звонки не работают?"
 description: "Основные причины неэффективности холодных звонков и как их преодолеть"
-icon: "phone-slash"
+icon: "tally-1"
 ---
 
 <Tip>
