--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -11,7 +11,7 @@ description: "Создайте, протестируйте и запустите
   <Accordion icon="brain" title="Настройка нейросети">
     Перейдите в раздел «Скиллбейсы» и нажмите на кнопку «Быстрый старт»
   </Accordion>
-  <Accordion icon="message" title="Описание компании">
+  <Accordion icon="message-square-dashed" title="Описание компании">
     В всплывающем окне расскажите чем занимается ваша компания, кому и с какой целью вы собираетесь звонить.
   </Accordion>
   <Accordion icon="phone" title="Тестирование">
