add images step 1

--- a/ai-training/how-to-configure.mdx
+++ b/ai-training/how-to-configure.mdx
@@ -7,11 +7,17 @@ description: "Подробное руководство по созданию и
 
 Для создания нового скрипта перейдите в раздел «Скиллбейсы» и нажмите на кнопку «Создать новый».
 
+<img src="/images/training/how-to-configure/1.png" />
+
 Перед вами откроется рабочее пространство из 6 разделов. Каждый из них важен для качественной работы искусственного интеллекта.
+
+<img src="/images/training/how-to-configure/2.png" />
 
 ## Роль продавца
 
 Это базовое самоощущение Саши — кто она, где работает, кому и зачем звонит. Нейросеть будет входить в описанный образ и осознавать себя так, как вы напишете.
+
+<img src="/images/training/how-to-configure/3.png" />
 
 <Tabs>
   <Tab title="Хороший пример">
@@ -31,6 +37,8 @@ description: "Подробное руководство по созданию и
 По опыту, клиент принимает решение о продолжении общения в первые 10 секунд разговора. Они определяют судьбу всего звонка.
 
 Готовые ответы — это фразы, которые Саша последовательно произносит в начале разговора вне зависимости от ответа клиента. Их настройка — самый утомительный процесс в настройке всей нейросети, но в то же время самый важный.
+
+<img src="/images/training/how-to-configure/7.png" />
 
 С настройкой готовых ответов вы получаете полное управление над установлением контакта с точностью до запятой в интонационном рисунке синтеза речи.
 
@@ -106,6 +114,8 @@ description: "Подробное руководство по созданию и
 
 Представляет из себя чек-лист последовательных задач, которые Саша выполнит по ходу диалога.
 
+<img src="/images/training/how-to-configure/8.png" />
+
 Зачастую включает в себя квалификационные вопросы и назначение следующего шага.
 
 При настройке используйте короткие фразы с глаголами повелительного наклонения.
@@ -134,6 +144,8 @@ description: "Подробное руководство по созданию и
 ## Аргументы и факты
 
 Это небольшой список коротких фактов, которые Саша будет использовать при отработке возражений и ответе на вопросы.
+
+<img src="/images/training/how-to-configure/6.png" />
 
 Отсылаясь к блоку «Чем LLM похожа на человека» — если мы хотим получить качественные ответы, нам надо обеспечить нейросеть минимально-необходимым, понятным и форматированным контентом.
 
@@ -168,6 +180,8 @@ description: "Подробное руководство по созданию и
 
 При создании нового скиллбейса вы увидите предустановленный стиль речи. Это инструкция, при которой формулирование мыслей Саши наиболее похоже на живого человека.
 
+<img src="/images/training/how-to-configure/4.png" />
+
 Если в ходе теста вы поймете что хотели бы изменить стиль коммуникации нейросети — внесите правки в этот раздел.
 
 **Хороший пример:**
@@ -181,6 +195,8 @@ description: "Подробное руководство по созданию и
 ## Важные правила
 
 В ходе тестирования вы сформулируете правки, которые не будут логически подходить ни под один раздел — впишите их в «Важные правила»
+
+<img src="/images/training/how-to-configure/5.png" />
 
 Зачастую это директивные указания для нейросети.
 
