--- a/ai-training/testing.mdx
+++ b/ai-training/testing.mdx
@@ -24,6 +24,8 @@ description: "Руководство по тестированию и отлад
 
 Перед вами откроется поле настройки инструкций. В левом верхнем углу будет иконка номера телефона.
 
+<img src="/images/training/testing/1.png" />
+
 По нажатию на иконку вы увидите номер телефона в формате:
 
 ```
@@ -35,6 +37,7 @@ description: "Руководство по тестированию и отлад
 ### Как проводить тестовый звонок
 
 1. Вставьте номер телефона в поле вызова на своем устройстве **без изменений**, с добавочным через запятую
+<img src="/images/training/testing/2.png" />
 2. Инициируйте звонок
 3. При соединении будет проиграна стартовая аудиодорожка от Саши, пока она воспроизводится добавочный номер телефона наберется в фоновом режиме
 4. По итогам набора добавочного номера Саша начнет воспроизводить готовые ответы и вы сможете протестировать созданный скиллбейс
@@ -46,6 +49,9 @@ description: "Руководство по тестированию и отлад
 - Фильтрации номера телефона
 - По значению «—» в колл-листе
 
+<img src="/images/training/testing/3.png" />
+
+
 Позже вы сможете вернуться к каждому звонку, повторно изучить его запись и транскрипцию.
 
 ### Внесение правок
@@ -53,9 +59,16 @@ description: "Руководство по тестированию и отлад
 По итогам тестов у вас сформируется список правок в скиллбейс. Для их внесения:
 
 1. Вернитесь в раздел «Скиллбейсы»
+<img src="/images/training/testing/4.png" />
+
+
 2. Выберите нужный скиллбейс
+<img src="/images/training/testing/5.png" />
+
+
 3. Внесите правки в систему инструкций для нейросети
 4. Нажмите на кнопку «Сохранить изменения»
+<img src="/images/training/testing/6.png" />
 
 **Результаты сохранения:**
 
