--- a/ai-training/variables.mdx
+++ b/ai-training/variables.mdx
@@ -36,6 +36,8 @@ description: "Персонализация диалогов с помощью п
 
 Приводя пример, вы можете вставить обращение по имени в раздел «Готовые ответы»:
 
+<img src="/images/training/variables/1.png" />
+
 Или вы можете обогатить информацию о клиенте в разделе «Аргументы и факты»:
 
 <Warning>
