--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -10,12 +10,15 @@ description: "Создайте, протестируйте и запустите
 <AccordionGroup>
   <Accordion icon="brain" title="Настройка нейросети">
     Перейдите в раздел «Скиллбейсы» и нажмите на кнопку «Быстрый старт»
+    <img src="images/quickstart/1.png" />
   </Accordion>
   <Accordion icon="message-square-dashed" title="Описание компании">
     В всплывающем окне расскажите чем занимается ваша компания, кому и с какой целью вы собираетесь звонить.
+    <img src="images/quickstart/2.png" />
   </Accordion>
   <Accordion icon="phone" title="Тестирование">
     Протестируйте минимально-жизнеспособную версию оператора по тестовому номеру телефона.
+    <img src="images/quickstart/3.png" />
   </Accordion>
 </AccordionGroup>
 
@@ -24,14 +27,17 @@ description: "Создайте, протестируйте и запустите
 <AccordionGroup>
   <Accordion icon="list" title="Создание колл-листа">
     Перейдите в раздел «Колл-листы», нажмите на кнопку «Создать новый»
+    <img src="images/quickstart/4.png" />
   </Accordion>
   <Accordion icon="webhook" title="Настройка вебхука">
     Перейдите во вкладку «Вебхуки», нажмите на кнопку «Создать новый». В выпадающем списке выберите передачу лидов в
     телеграмм — «Telegram»
+    <img src="images/quickstart/5.png" />
   </Accordion>
   <Accordion icon="telegram" title="Настройка Telegram">
     Проследуйте инструкции, вставьте ID чата в всплывающем окне, выберите событие «Только лиды», проверьте интеграцию и
     нажмите на кнопку «Создать».
+    <img src="images/quickstart/6.png" />
   </Accordion>
 </AccordionGroup>
 
@@ -41,16 +47,20 @@ description: "Создайте, протестируйте и запустите
   <Accordion icon="brain" title="Настройка скиллбейса">
     В ранее созданном колл-листе перейдите в «Управление», в поле «Скиллбейсы» выберите настроенный с помощью функции
     «Быстрый старт» скиллбейс и нажмите на кнопку «Загрузить контакты»
+    <img src="images/quickstart/7.png" />
   </Accordion>
   <Accordion icon="download" title="Скачивание шаблона">
     Скачайте шаблон базы контактов из всплывающего окна.
+    <img src="images/quickstart/8.png" />
   </Accordion>
   <Accordion icon="upload" title="Загрузка базы">
     Сформируйте базу клиентов в формате CSV по шаблону, указанному на скриншоте. Загрузите ее на платформу, проверьте
     соответствие загрузки с помощью функции «Предварительный просмотр» и нажмите на кнопку «Загрузить».
+    <img src="images/quickstart/9.png" />
   </Accordion>
   <Accordion icon="check" title="Проверка">
     Готово! Вы можете проверить загруженные контакты с функцией «Предпросмотр».
+    <img src="images/quickstart/10.png" />
   </Accordion>
 </AccordionGroup>
 
@@ -60,9 +70,11 @@ description: "Создайте, протестируйте и запустите
   <Accordion icon="play" title="Активация прозвона">
     Не выходя из созданного колл-листа перейдите в раздел «Управление» и активируйте прозвон с помощью ползунка «Статус
     колл-листа»
+    <img src="images/quickstart/11.png" />
   </Accordion>
   <Accordion icon="list" title="Просмотр результатов">
     Готово! Если вы сделали все правильно и сейчас рабочее время — результаты обзвона отобразятся в разделе «История
     звонков»
+    <img src="images/quickstart/12.png" />
   </Accordion>
 </AccordionGroup>
