add icons + images

--- a/ai-training/how-to-configure.mdx
+++ b/ai-training/how-to-configure.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Как настроить Сашу для моей задачи?"
 description: "Подробное руководство по созданию и настройке скиллбейса"
+icon: "tally-3"
 ---
 
 Скиллбейс — это система инструкций для нейросети, который позволяет полностью управлять речь и ответами Sasha AI
