--- a/ai-training/improving-quality.mdx
+++ b/ai-training/improving-quality.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Повышение качества ответов"
-description: "Методы и техники улучшения качества ответов Sasha AI"
+title: "Как улучшить качество работы ИИ?"
+description: "Эффективные методы повышения качества диалогов и конверсии нейросети"
+icon: "trending-up"
 ---
 
 В этом разделе разберем техники промпт-инжиниринга и лучшие практики по составлению инструкций в скиллбейсах.
