--- a/ai-training/multilingual.mdx
+++ b/ai-training/multilingual.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Мультиязычность"
-description: "Поддержка языков в Sasha AI"
+title: "Многоязычность"
+description: "Поддержка различных языков в Sasha AI"
+icon: "languages"
 ---
 
 На текущий момент Sasha AI поддерживает исключительно русский язык.
