--- a/ai-training/success-factors.mdx
+++ b/ai-training/success-factors.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Ключевые факторы успеха"
 description: "Основные элементы, которые определяют эффективность работы с Sasha AI"
+icon: "target"
 ---
 
 За время работы к нам напрямую обращались десятки компаний с запросом на поиск точек роста в обзвонах.
