--- a/ai-training/testing.mdx
+++ b/ai-training/testing.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Тестирование искусственного интеллекта"
 description: "Руководство по тестированию и отладке скиллбейсов в режиме реального времени"
+icon: "test-tube"
 ---
 
 Для вашего удобства мы реализовали возможность править и тестировать разные скиллбейсы по телефону в режиме реального времени.
