--- a/ai-training/understanding-sasha.mdx
+++ b/ai-training/understanding-sasha.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Интро"
 description: "Знакомство с песочницей для настройки поведения нейросети — скиллбейсом"
+icon: "tally-1"
 ---
 
 В этом разделе мы познакомим вас с песочницей для настройки поведения вашей нейросети — скиллбейсом. Однако перед этим разберемся с тем, что Саша уже знает без дополнительных инструкций из коробки.
