--- a/ai-training/variables.mdx
+++ b/ai-training/variables.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Переменные"
-description: "Персонализация диалогов с помощью переменных"
+description: "Использование динамических переменных в диалогах нейросети"
+icon: "variable"
 ---
 
 Обрабатывая базу клиентов хороший живой оператор смотрит на дополнительные поля в карточке клиента. Он запоминает о клиенте какие-то пункты и исходя из них корректирует стратегию работы с лидом.
