--- a/ai-training/voice-settings.mdx
+++ b/ai-training/voice-settings.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Настройки голоса"
-description: "Настройка синтеза речи, ударений и произношения"
+description: "Тонкая настройка голоса и речевых параметров нейросети"
+icon: "mic"
 ---
 
 Каждый текст, сгенерированный «скиллбейсом» система отправляет на синтез, таким образом происходит общение нейросети с клиентом в режиме реального времени.
