--- a/ai-training/what-sasha-knows.mdx
+++ b/ai-training/what-sasha-knows.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Что Саша умеет по умолчанию?"
 description: "Обзор базовых возможностей и знаний нейросети Саша"
+icon: "tally-2"
 ---
 
 Для начала проведем краткий экскурс в мир больших языковых моделей и технологии, которая является мозгом нашего нейродиспетчера. Это поможет вам осознать возможности и ограничения системы, как следствие писать более эффективные инструкции.
