--- a/call-launch/account-verification.mdx
+++ b/call-launch/account-verification.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Верификация организации"
-description: "Процесс верификации для получения полного доступа к платформе"
+title: "Верификация аккаунта"
+description: "Процедура верификации для получения доступа к запуску звонков"
+icon: "shield-check"
 ---
 
 После создания новой организации в ваш кабинет придет уведомление: 
