--- a/call-launch/call-lists.mdx
+++ b/call-launch/call-lists.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Колл-листы"
 description: "Создание, управление и загрузка контактов в списки обзвона"
+icon: "list"
 ---
 
 В разделе «Колл-листы» вы можете создавать, запускать, приостанавливать и форматировать списки контактов, которые Саша получает в работу.
