--- a/call-launch/callback-logic.mdx
+++ b/call-launch/callback-logic.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Логика перезвона"
-description: "Автоматические перезвоны и повторные звонки"
+description: "Алгоритм обработки запросов на перезвон от клиентов"
+icon: "phone-incoming"
 ---
 
 Наша цель — передавать вам только **квалифицированных, качественных лидов**.
