--- a/call-launch/calling-logic.mdx
+++ b/call-launch/calling-logic.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Логика обзвона"
-description: "Настройка параметров и логики обзвона клиентов"
+description: "Настройка параметров и алгоритмов обзвона клиентов"
+icon: "phone-call"
 ---
 
 В этом разделе обсуждаем каким образом Саша обзванивает базу и как производить настройку этого процесса.
