--- a/call-launch/lead-transfer-logic.mdx
+++ b/call-launch/lead-transfer-logic.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Логика передачи лида"
-description: "Как система определяет и передает лидов"
+title: "Логика передачи лидов"
+description: "Алгоритм определения и передачи квалифицированных лидов"
+icon: "user-check"
 ---
 
 В разделе «Ошибки: настройка ненастраиваемого» мы затронули тему мультиагентности.
