--- a/common-mistakes/ai-training/configuring-unconfigurable.mdx
+++ b/common-mistakes/ai-training/configuring-unconfigurable.mdx
@@ -36,7 +36,7 @@ description: "Попытки настроить через скиллбейс т
 Закрывающие сообщения генерируются автоматически: на базе истории разговора и роли продавца.
 
 <Info>
-На текущий момент вы не можете настраивать стиль и содержание смс-сообщения. Мы планируем добавить эту фичу в ближайшее время, следите за обновлениями в телеграм-канале платформы: @sasha_platform
+На текущий момент вы не можете настраивать стиль и содержание смs-сообщения. Мы планируем добавить эту фичу в ближайшее время, следите за обновлениями в телеграм-канале платформы: @sasha_platform
 </Info>
 
 ### Синтез речи
