--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Введение
 description: "Единственный и обязательный к изучению источник информации по вопросам, связанным с Sasha AI"
+icon: "hand"
 ---
 
 ## Знакомство с платформой
