--- a/integrations/communication-channels/closing-messages.mdx
+++ b/integrations/communication-channels/closing-messages.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Закрывающие сообщения"
-description: "Настройка автоматических фоллоу-апов в SMS и WhatsApp"
+description: "Автоматическая отправка сообщений после завершения звонков"
+icon: "message-circle"
 ---
 
 # Дополнительные каналы коммуникации
