--- a/integrations/communication-channels/sms.mdx
+++ b/integrations/communication-channels/sms.mdx
@@ -1,6 +1,7 @@
 ---
 title: "SMS"
-description: "Настройка отправки закрывающих сообщений через SMS"
+description: "Настройка отправки SMS-сообщений клиентам"
+icon: "message-square"
 ---
 
 Для подключения фоллоу-апов в SMS-сообщении следуйте инструкции ниже.
