--- a/integrations/communication-channels/whatsapp.mdx
+++ b/integrations/communication-channels/whatsapp.mdx
@@ -1,6 +1,7 @@
 ---
-title: "WhatsApp (Wazzup)"
-description: "Настройка отправки закрывающих сообщений через WhatsApp с помощью Wazzup"
+title: "WhatsApp"
+description: "Интеграция с WhatsApp для отправки сообщений"
+icon: "message-circle-more"
 ---
 
 Для подключения фоллоу-апов в WhatsApp через сервис Wazzup следуйте инструкции ниже.
