--- a/knowledge-base/large-files.mdx
+++ b/knowledge-base/large-files.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Ограничения на загрузку"
+title: "Ограничения на загрузку контактов"
 description: "Правила и ограничения при работе с колл-листами"
 ---
 
