--- a/partners/affiliate-program.mdx
+++ b/partners/affiliate-program.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Партнерская программа"
 description: "В рамках партнерской программы мы предлагаем три модели сотрудничества. Изучите документ и оставьте заявку на участие"
+icon: "handshake"
 ---
 
 ## Кто мы такие?
