--- a/payments-billing/credit-limit.mdx
+++ b/payments-billing/credit-limit.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Кредитный лимит"
 description: "Использование кредитного лимита и управление задолженностью"
+icon: "banknote"
 ---
 
 По ходу пользования сервисом вы можете пользоваться **кредитным лимитом**.
