--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Быстрый старт"
 description: "Создайте, протестируйте и запустите своего первого нейродиспетчера за 4 простых шага"
+icon: "sparkles"
 ---
 
 Для того, чтобы создать, протестировать и запустить своего первого нейродиспетчера вам нужно сделать 4 простых шага:
