--- a/results-analysis/call-details/call-analysis.mdx
+++ b/results-analysis/call-details/call-analysis.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Анализ звонков"
-description: "Обзор статистики и ключевых показателей по звонкам"
+description: "Детальный анализ отдельных разговоров и их результатов"
+icon: "search"
 ---
 
 Для перехода в карточку звонка нажмите на любой интересующий вас звонок из таблицы.
