--- a/results-analysis/call-details/csv-export.mdx
+++ b/results-analysis/call-details/csv-export.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Выгрузка CSV"
-description: "Экспорт данных для сквозной аналитики и отчетности"
+title: "Экспорт в CSV"
+description: "Выгрузка данных о звонках в формате CSV для анализа"
+icon: "download"
 ---
 
 Для настройки сквозной аналитики и табличных отчетов по итогам прозвона воспользуйтесь функцией **"Выгрузка в CSV"**
