--- a/results-analysis/call-details/filtering.mdx
+++ b/results-analysis/call-details/filtering.mdx
@@ -1,6 +1,7 @@
 ---
-title: 'Фильтрация звонков'
-description: 'Инструменты для поиска и анализа конкретных разговоров'
+title: "Фильтрация звонков"
+description: "Инструменты поиска и фильтрации в истории звонков"
+icon: "filter"
 ---
 
 ## Фильтр по телефону
