--- a/results-analysis/statistics/cohort-analysis.mdx
+++ b/results-analysis/statistics/cohort-analysis.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Когортный анализ"
-description: "Анализ эффективности контактов по тегам и источникам"
+description: "Анализ эффективности по группам клиентов и временным периодам"
+icon: "trending-up"
 ---
 
 Снизу раздела **"Статистика"** расположена таблица с результатами прозвона по разным тегам.
