--- a/system-info/notifications/maintenance.mdx
+++ b/system-info/notifications/maintenance.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Технические работы"
 description: "Уведомления о приостановке работы сервиса"
+icon: "wrench"
 ---
 
 Если в организации появилось уведомление о приостановке работы сервиса «Колл-центр» — у нас что-то сломалось.
