--- a/system-info/notifications/verification-required.mdx
+++ b/system-info/notifications/verification-required.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Требование верификации"
 description: "Уведомление о необходимости пройти верификацию организации"
+icon: "shield-alert"
 ---
 
 Для запуска звонков вам необходимо связаться с менеджером, подписать бумаги и оплатить одну из подписок.
