--- a/ai-training/knowledge-base.mdx
+++ b/ai-training/knowledge-base.mdx
@@ -1,6 +1,7 @@
 ---
-title: "База знаний моей компании"
-description: "Возможности и ограничения работы с корпоративными знаниями"
+title: "База знаний"
+description: "Загрузка и управление базой знаний для нейросети"
+icon: "database"
 ---
 
 На текущий момент вы можете обучить Sasha AI ограниченному количеству фактов о вашем предложении или компании с помощью раздела «Аргументы и факты»
