--- a/payments-billing/subscriptions.mdx
+++ b/payments-billing/subscriptions.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Подписки"
 description: "Тарификация и модель оплаты сервиса Sasha AI"
+icon: "credit-card"
 ---
 
 С первого июня 2025 года Sasha AI переходит на **поминутную тарификацию** и на **подписную модель** оплаты работы сервиса.
