--- a/results-analysis/statistics/dashboard.mdx
+++ b/results-analysis/statistics/dashboard.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Дашборд"
-description: "Обзор статистики и ключевых показателей по звонкам"
+description: "Основные метрики и показатели эффективности обзвонов"
+icon: "bar-chart-3"
 ---
 
 Для просмотра результатов по итогам звонков перейдите в раздел **"Статистика"**
