--- a/system-info/notifications/balance-ending.mdx
+++ b/system-info/notifications/balance-ending.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Уведомления о балансе"
 description: "Отрицательный баланс и блокировка организации"
+icon: "wallet"
 ---
 
 По ходу пользования сервисом вы можете пользоваться кредитным лимитом.
