--- a/call-launch/account-verification.mdx
+++ b/call-launch/account-verification.mdx
@@ -14,6 +14,8 @@ icon: "shield-check"
 
 Единственное, что вам не доступно без верификации — это **активация колл-листов**.
 
+<img src="/images/call-launch/account-verification/1.png" />
+
 Это значит, что неверифицированная организация не сможет запускать обзвон по базе клиентов.
 
 ### Что доступно без верификации
@@ -28,6 +30,8 @@ icon: "shield-check"
 ### Тестовый баланс
 
 Каждая новая организация имеет по старту подписку Free.
+
+<img src="/images/call-launch/account-verification/2.png" />
 
 Этого за уши хватает, чтобы:
 - Протестировать технологию
