--- a/call-launch/call-lists.mdx
+++ b/call-launch/call-lists.mdx
@@ -13,10 +13,15 @@ icon: "list"
 Для ручного добавления контактов в список обзвона:
 
 1. Перейдите в раздел «Колл-листы»
+<img src="/images/call-launch/call-lists/1.png" />
 2. Выберите нужный колл-лист
+<img src="/images/call-launch/call-lists/2.png" />
 3. Перейдите в подраздел «Управление»
 4. Нажмите на кнопку «Загрузить контакты»
+<img src="/images/call-launch/call-lists/3.png" />
+
 5. Перетащите предварительно форматированную базу контактов со своего компьютера
+<img src="/images/call-launch/call-lists/4.png" />
 
 ### Шаблон базы контактов
 
@@ -50,6 +55,8 @@ icon: "list"
 - Добавленные в колл-лист контакты
 - Контакты, которые система не смогла пропустить
 
+<img src="/images/call-launch/call-lists/5.png" />
+
 Подробнее о причинах пропуска контактов читайте в разделе «Ограничения на работу с колл-листами».
 
 ## Автоматизированная загрузка контактов
@@ -59,12 +66,19 @@ icon: "list"
 ### Настройка:
 
 1. Перейдите в раздел «Колл-листы»
+<img src="/images/call-launch/call-lists/6.png" />
 2. Выберите нужный колл-лист
+<img src="/images/call-launch/call-lists/7.png" />
 3. Перейдите в подраздел «Интеграции»
+<img src="/images/call-launch/call-lists/8.png" />
 4. Нажмите на кнопку «Создать интеграцию»
+<img src="/images/call-launch/call-lists/9.png" />
 5. Введите название интеграции, ее описание
+<img src="/images/call-launch/call-lists/10.png" />
 6. В выпадающем списке «Тип интеграции» установите значение «API (Webhook)»
+<img src="/images/call-launch/call-lists/11.png" />
 7. Нажмите на кнопку «Создать»
+<img src="/images/call-launch/call-lists/12.png" />
 
 Перед вами откроется всплывающее окно с URL адресом созданного вебхука.
 
@@ -124,6 +138,8 @@ icon: "list"
 
 Для этого перед загрузкой базы внесите в таблицу с контактами дополнительные столбцы в соответствии с теми переменными, которые вы указали в скиллбейсе.
 
+<img src="/images/call-launch/call-lists/13.png" />
+
 В каждой строчке получившейся таблицы должен лежать номер телефона, теги и переменные принадлежащие ему.
 
 ### Шаблон базы с переменной {client_name}
@@ -165,8 +181,13 @@ icon: "list"
 ### Как удалить контакты:
 
 1. Перейдите в раздел «Колл-листы»
+<img src="/images/call-launch/call-lists/14.png" />
+
 2. Выберите нужный колл-лист
+<img src="/images/call-launch/call-lists/15.png" />
+
 3. Перейдите в подраздел «Контакты»
+<img src="/images/call-launch/call-lists/16.png" />
 
 Перед вами откроется таблица с загруженными в этот колл-лист контактами.
 
@@ -183,5 +204,10 @@ icon: "list"
 
 Для удаления контактов:
 1. Отфильтруйте таблицу или выберите нужные номера
+<img src="/images/call-launch/call-lists/17.png" />
+
 2. Нажмите на квадрат в левом верхнем углу таблицы
+<img src="/images/call-launch/call-lists/18.png" />
+
 3. Нажмите на кнопку «Удалить все контакты» 
+<img src="/images/call-launch/call-lists/19.png" />
