--- a/call-launch/callback-logic.mdx
+++ b/call-launch/callback-logic.mdx
@@ -50,8 +50,13 @@ icon: "phone-incoming"
 Также вы можете отслеживать колл-сессию по каждому клиенту:
 
 1. Перейдите в раздел «История звонков»
+<img src="/images/call-launch/callback-logic/1.png" />
+
 2. Выберите нужную карточку звонка
+<img src="/images/call-launch/callback-logic/2.png" />
+
 3. Нажмите на подраздел «Колл-сессии»
+<img src="/images/call-launch/callback-logic/3.png" />
 
 В этой панели отображается **вся история звонков клиенту**. Так вы можете отследить его путь: от первой до последней инициации вызова.
 
