--- a/call-launch/calling-logic.mdx
+++ b/call-launch/calling-logic.mdx
@@ -43,10 +43,18 @@ icon: "phone-call"
 Для того, чтобы выставить график звонков:
 
 1. Перейдите в раздел «Колл-листы»
+<img src="/images/call-launch/calling-logic/1.png" />
+
 2. Выберите нужный колл-лист
+<img src="/images/call-launch/calling-logic/2.png" />
+
 3. Провалитесь в подраздел «Управление»
+
 4. Найдите пункт «Рабочее время»
+<img src="/images/call-launch/calling-logic/3.png" />
+
 5. Нажмите на кнопку «Настроить рабочее время»
+<img src="/images/call-launch/calling-logic/4.png" />
 
 В открывшемся поле выберите дни недели и время, в которое вы хотите звонить своим клиентам.
 
