--- a/call-launch/lead-transfer-logic.mdx
+++ b/call-launch/lead-transfer-logic.mdx
@@ -32,10 +32,15 @@ icon: "user-check"
 При передаче лида система отправляет:
 
 - **Номер телефона клиента**
+<img src="/images/call-launch/lead-transfer-logic/1.png" />
 - **Историю разговора**
+<img src="/images/call-launch/lead-transfer-logic/2.png" />
 - **Достигнутые договоренности**
+<img src="/images/call-launch/lead-transfer-logic/3.png" />
 - **Дополнительную информацию о клиенте** (если была собрана)
+<img src="/images/call-launch/lead-transfer-logic/4.png" />
 - **Теги и переменные** (если были указаны)
+<img src="/images/call-launch/lead-transfer-logic/5.png" />
 
 ## Настройка передачи
 
