--- a/integrations/call-results-transfer.mdx
+++ b/integrations/call-results-transfer.mdx
@@ -77,23 +77,36 @@ description: "Настройка интеграций для передачи р
 <img src="/images/integrations/call-results-transfer/14.png" />
 
 Готово! Вы можете проверить интеграцию с помощью функции «Тестовый запрос».
+<img src="/images/integrations/call-results-transfer/15.png" />
 
 ### Интеграция с Битрикс 24
 
 #### Настройка:
 
 1. Перейдите в раздел «Колл-листы», выберите нужный колл-лист и нажмите на подраздел «Вебхуки»
+<img src="/images/integrations/call-results-transfer/16.png" />
+
 2. Нажмите на кнопку «Создать вебхук». В всплывшем окне выберите пункт «Битрикс 24»
+<img src="/images/integrations/call-results-transfer/17.png" />
+
 3. Зайдите в настройки своего Битрикс 24 — в интерфейсе они отображены как иконка шестеренки в правом верхнем углу
+<img src="/images/integrations/call-results-transfer/18.png" />
+
 4. Выберите «Разработчикам» → «Другие» → «Входящие вебхуки»
+<img src="/images/integrations/call-results-transfer/19.png" />
+
 5. Нажмите на кнопку «Добавить вебхук»
+<img src="/images/integrations/call-results-transfer/20.png" />
 
 <Warning>
 **Важно:** выберите необходимые права доступа — как минимум «CRM»
 </Warning>
 
 6. Скопируйте полный URL адрес созданного вебхука и вставьте его в соответствующее поле в всплывающем окне на платформе
+<img src="/images/integrations/call-results-transfer/21.png" />
+
 7. Нажмите на кнопку «Создать»
+<img src="/images/integrations/call-results-transfer/22.png" />
 
 Готово! Теперь все лиды, генерируемые Сашей будут создаваться как новая сущность в нулевой воронке «Лиды» в вашем Битрикс 24.
 
