--- a/results-analysis/statistics/dashboard.mdx
+++ b/results-analysis/statistics/dashboard.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Дашборд"
 description: "Основные метрики и показатели эффективности обзвонов"
-icon: "bar-chart-3"
+icon: "square-chart-gantt"
 ---
 
 Для просмотра результатов по итогам звонков перейдите в раздел **"Статистика"**
