--- a/lead-generation/converting-leads-to-revenue.mdx
+++ b/lead-generation/converting-leads-to-revenue.mdx
@@ -34,6 +34,8 @@ icon: "tally-3"
 
 Люди очень хорошо определяют когда с ними общаются как с людьми, а когда как с кошельками. Уберите из речи все, что говорит клиенту о том что вы хотите у него что-то забрать.
 
+[Ошибки в исходящих продажах](https://docs.google.com/spreadsheets/d/10A73L-wRnQfKWtY89Gmf9EoEJOcIdqouYjXfH2KlB2c/edit?gid=0#gid=0)
+
 ## Ошибки в исходящих продажах
 
 В таблице приведены основные ошибки, делая которые вы будете сигнализировать клиенту о своем намерении его поиметь. Не делайте их, влюбляйте человека в себя и формируйте переговорную позицию.
